[package]
name = "mbti"
version = "0.1.3"
authors = ["Giorgio Pomettini <giorgio.pomettini@gmail.com>"]
edition = "2018"
description = "A library to work with Myer-Briggs personality types"
keywords = ["api", "psychology", "psicometrics"]
categories = ["science"]
license = "MIT"
repository = "https://github.com/Pomettini/mbti"
readme = "readme.md"

[dependencies]
strum = ">=0.15.0"
strum_macros = ">=0.15.0"
maplit = ">=1.0.1"